--- a/final_project/citys/app/views/map/index.html.erb
+++ b/final_project/citys/app/views/map/index.html.erb
@@ -2,36 +2,35 @@
 
 <h1>Map</h1>
 
-<% cities = indexed_graph %>
+<h2>Cities</h2>
 
 <table>
   <thead>
     <tr>
-      <th></th>
-      <% index = 0 %>
-      <% cities.each do |city| %>
-        <th><%= cities.key index %></th>
-        <% index += 1 %>
-      <% end %>
+      <th>Name</th>
+      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% cities.each do |city| %>
+    <% @cities.each do |city| %>
       <tr>
-        <th><%= cities.key index %></th>
-        <% row(city, @graph).each do |column| %>
-          <% if column == 0 %>
-            <td></td>
-          <% else %>
-            <td><%= column %></td>
-          <% end  %>
-        <% end %>
-        <% index += 1 %>
+        <td><%= city.name %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
+
+<h2>Calculate Distance</h2>
+
+<%= form_for :city, :as => 'calculate', :url => {:action => 'dijkstra'} do |f| %>
+  <%= select_tag "origin", options_from_collection_for_select(City.all, "id", "name") %>
+
+  <%= submit_tag "Calulate distances"%>
+<% end %>
+
+<div id="result"></div>
+
 
